# qdata-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md  environment.yml
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
benchmarks/: benchmark_data.h  qdata_benchmark.cpp
docs/: perf_experiments.md  qdata_spec.md
docs/experimental/: full_graph.md
examples/: mtcars_roundtrip.cpp  write_mtcars_qdata.R
include/: qdata.h
include/blosc/: shuffle_routines.h  unshuffle_routines.h
include/io/: block_module.h  filestream_module.h  io_common.h  multithreaded_block_module.h  tbb_flow_compat.h  xgboost_blockshuffle_model.h  xxhash_module.h  zstd_module.h
include/qdata_format/: core_types.h  qdata.h  traits.h  write_traits.h
include/qdata_format/detail/: byte_buffer.h  constants.h  file_headers.h  memory_stream.h  qdata_deserializer.h  qdata_serializer.h  r_compat_limits.h  read_common.h
include/xxhash/: update.sh
tests/cpp/: buffer_api.cpp  compat_limits.cpp  odr_headers.cpp  roundtrip_file.cpp  roundtrip_memory.cpp  write_builtin_support.cpp
tests/r/: builtin_write_support.R  roundtrip_testing.R
tests/rcpp/: environment-conda.yml  environment-cran.yml  environment-mixed.yml  install_rcppparallel.R  run_flow_compat_test.sh  tbb_flow_compat.R  tbb_flow_compat_probe.cpp
